--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "export-to-csv": "^1.3.0",
     "lucide-react": "^0.427.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
